<resources>
    <string name="app_name">music</string>
    <string name="phone_number">手机号:</string>
    <string name="password">密码:</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="phone_login">手机登录</string>
    <string name="logout">退出登录</string>
    <string name="nickname">用户名:</string>
    <string name="personal_message">个人信息</string>
    <string name="my_playlist">我的歌单</string>
    <string name="play_all">播放全部</string>
    <string name="playlist">歌单</string>
    <string name="user">用户</string>
    <string name="unknown">未知</string>
    <string name="time_start">00:00</string>
    <string name="load_more">加载更多</string>
    <string name="loading">努力加载中…</string>
    <string name="next_to_play">下一首播放</string>
    <string name="current_play">当前播放</string>
    <string name="count_zero">(0)</string>
    <string name="list_circle">列表循环</string>
    <string name="one_circle">单曲循环</string>
    <string name="random_play">随机播放</string>
    <string name="hot_word">热搜榜</string>
    <string name="download_manage">下载管理</string>
    <string name="no_download">暂无下载</string>
    <string name="start_all">全部开始</string>
    <string name="delete_all">全部删除</string>
    <string name="click_download">已暂停,点击继续下载</string>
    <string name="zero_percent">0M/0M</string>
    <string name="download">下载</string>
</resources>
