<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/login_bar">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@android:color/white"
            android:id="@+id/login_back_button"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:text="@string/phone_login"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/login_bar"
        android:layout_margin="10dp"
        android:id="@+id/input_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/phone_number"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/phone_number"
                android:textColor="@android:color/black"
                android:inputType="phone"
                android:autofillHints="@string/phone_hint"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:text="@string/password"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/password_text"
                android:textColor="@android:color/black"
                android:inputType="textPassword"
                android:autofillHints="@string/password_hint"
                android:textSize="20sp"/>

        </LinearLayout>



    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@drawable/round_rectangle_button"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:gravity="center"
        android:layout_below="@id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

</RelativeLayout>