<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/status_back"
                android:src="@drawable/back"
                android:background="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/personal_message"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:text="@string/logout"
            android:textSize="20sp"
            android:background="@drawable/round_rectangle_button"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_above="@id/logout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_toStartOf="@id/user_name"
            android:layout_above="@id/logout"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="10dp"/>


        <com.example.music.widget.RoundAnimationImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/status_avatar"
            android:layout_above="@id/user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>





    </RelativeLayout>

</androidx.cardview.widget.CardView>