<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/current_play"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_marginStart="4dp"
                android:text="@string/count_zero"
                android:gravity="center"
                android:id="@+id/bt_window_list_count"/>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/bt_window_bt_layout"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/bt_window_bt_iv"
                    android:src="@drawable/list_circle"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:id="@+id/bt_window_bt_tv"
                    android:text="@string/list_circle"
                    android:gravity="center"
                    android:textColor="@android:color/black"/>

            </LinearLayout>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:id="@+id/bt_window_clear_all"
                android:layout_centerVertical="true"
                android:src="@drawable/clear_all"
                android:background="@android:color/transparent"/>


        </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:id="@+id/bt_window_list"/>






    </LinearLayout>

</androidx.cardview.widget.CardView>